vectors: Implement vector layers from GSoC 2006
Ports the work done by Hendrik Boom, Martin Nordholts, Gilles Rochefort,
and Jacob Boerema to Gimp 2.99/3.0.

--- a/menus/paths-menu.ui
+++ b/menus/paths-menu.ui
@@ -29,6 +29,7 @@
         <item><attribute name="action">app.paths-merge-visible</attribute></item>
       </section>
       <section>
+        <item><attribute name="action">app.paths-to-vector-layer</attribute></item>
         <item><attribute name="action">app.paths-selection-replace</attribute></item>
         <item><attribute name="action">app.paths-selection-add</attribute></item>
         <item><attribute name="action">app.paths-selection-subtract</attribute></item>
