--- a/menus/layers-menu.ui
+++ b/menus/layers-menu.ui
@@ -7,6 +7,7 @@
       <attribute name="icon">gimp-layers</attribute>
 
       <item><attribute name="action">app.layers-edit-text</attribute></item>
+      <item><attribute name="action">app.layers-edit-vector</attribute></item>
       <item><attribute name="action">app.layers-edit-attributes</attribute></item>
       <submenu>
         <attribute name="label" translatable="yes" context="layers-action">Blend Space</attribute>
@@ -62,6 +63,10 @@
         <item><attribute name="action">app.layers-text-discard</attribute></item>
         <item><attribute name="action">app.layers-text-to-path</attribute></item>
         <item><attribute name="action">app.layers-text-along-path</attribute></item>
+      </section>
+      <section>
+        <item><attribute name="action">app.layers-vector-fill-stroke</attribute></item>
+        <item><attribute name="action">app.layers-vector-discard</attribute></item>
       </section>
       <section>
         <item><attribute name="action">app.layers-resize</attribute></item>
